--- a/webview/Phigros/style.css
+++ b/webview/Phigros/style.css
@@ -583,7 +583,28 @@ img.imagethumb2{
 	width:390px;
 	margin:0 35px 0 0;
 	}
+
+.ano_feature_section h2{
+	text-align:left;
+	font-family: 'open_sansregular';
+	font-size:30px;
+	color:#333;
+	font-weight:normal;
+	margin:0 0 30px 0;
+	padding:0 0 0 0;
+	}
 	
+.ano_feature_section  p{
+	text-align:left;
+	font-family: 'open_sanslight';
+	font-size:14px;
+	color:#777779;
+	line-height:24px;
+	font-weight:normal;
+	margin:0 0 30px 0;
+	}
+	
+
 /*============== Frequently Asked Section =================*/
 .common_section{
 	float:left;
